--- a/front/front/src/app/Usine/views_usine/create-conteneur-usine/create-conteneur-usine.component.html
+++ b/front/front/src/app/Usine/views_usine/create-conteneur-usine/create-conteneur-usine.component.html
@@ -70,12 +70,12 @@
     </div>
 
     <div class="form-group">
-      <label for="Poids">Poids(kg)</label>
+      <label for="poids">Poids(kg)</label>
       <input
         type="number"
-        formControlName="Poids"
+        formControlName="poids"
         class="form-control"
-        id="Poids"
+        id="poids"
         placeholder="Entrez la Poids"
       />
     </div>
