--- a/front/front/src/app/Usine/views_usine/afficheliste-conteneur-usine/afficheliste-conteneur-usine.html
+++ b/front/front/src/app/Usine/views_usine/afficheliste-conteneur-usine/afficheliste-conteneur-usine.html
@@ -15,7 +15,8 @@
     <thead>
       <tr>
         <th scope="col">Code</th>
-        <th scope="col">Prix</th>
+        <th scope="col">Prix(dt)</th>
+        <th scope="col">Poids(kg)</th>
         <th scope="col">Usine</th>
         <th scope="col">Depot</th>
         <th scope="col">Type</th>
@@ -26,6 +27,7 @@
       <tr *ngFor="let item of conteneurs">
         <td>{{ item.conteneur_code }}</td>
         <td>{{ item.conteneur.prix }}</td>
+        <td>{{ item.conteneur.poids }}</td>
         <td>{{ item.user_name }}</td>
         <td>{{ item.depot_name }}</td>
         <td>{{ item.dechet_name }}</td>
