Amélioration de la fonction onSubmit pour la vérification des emails et noms d'utilisateur

--- a/front/front/src/app/components/forget-password/forget-password.component.html
+++ b/front/front/src/app/components/forget-password/forget-password.component.html
@@ -1,7 +1,13 @@
-<!-- forget-password.component.html -->
-<form [formGroup]="forgetPasswordForm" (ngSubmit)="onSubmit()">
-  <label for="email">Email</label>
-  <input id="email" formControlName="email" type="email" />
-  <button type="submit">Send Reset Link</button>
-</form>
-<p *ngIf="message">{{ message }}</p>
+
+  <div class="signup-page">
+    <h2>Forgot Password</h2>
+    <form [formGroup]="forgetPasswordForm" (ngSubmit)="onSubmit()" class="form">
+      <input id="email" formControlName="email" type="email" placeholder="Enter your email" />
+      <button type="submit">Send Reset Link</button>
+    </form>
+    <p *ngIf="message" class="message">{{ message }}</p>
+    
+    <a routerLink="/login">Connecter</a>
+
+  </div>
+  
