--- a/front/front/src/app/reset-password/reset-password.component.html
+++ b/front/front/src/app/reset-password/reset-password.component.html
@@ -1,6 +1,6 @@
-<div>
+<div class="signup-page">
   <h2>Reset Password</h2>
-  <form (ngSubmit)="onSubmit()">
+  <form (ngSubmit)="onSubmit()" class="form">
     <div>
       <label for="password">New Password:</label>
       <input type="password" id="password" [(ngModel)]="password" name="password" required />
