Amélioration de la fonction onSubmit pour la vérification des emails et noms d'utilisateur

--- a/front/front/src/app/Admin/layout/default-layout/default-header/default-header.component.html
+++ b/front/front/src/app/Admin/layout/default-layout/default-header/default-header.component.html
@@ -19,6 +19,15 @@
           >Dechets</a
         >
       </c-nav-item>
+
+      <c-nav-item>
+        <a
+          cNavLink
+          routerLink="/AfficherListedetypedechets"
+          routerLinkActive="active"
+          >Liste de type de dechets </a
+        >
+      </c-nav-item>
       <c-nav-item>
         <a
           cNavLink
