--- a/front/front/src/app/Usine/views_usine/demande/demande.component.html
+++ b/front/front/src/app/Usine/views_usine/demande/demande.component.html
@@ -26,8 +26,8 @@
                 [routerLink]="['Usine/views_usine/users_details/'
                 ,demande.demande.user_id ]"
                 routerLinkActive="active">{{ demande.user_name }}</a></td>     
-                <td class="text-center">le conteneur {{ demande. demande.conteneur?.code }}
-                  de dechets   {{ demande.demande.conteneur?.dechet.type}}  dans le depot {{ demande.demande.conteneur?.depot.nom}} qui situé a  {{ demande.demande.conteneur?.depot.lieu}}   </td>       
+                <td class="text-center">le conteneur  de dechets {{ demande. demande.conteneur?.code }}
+                    avec le type {{ demande.demande.conteneur?.dechet.type}} et la poids {{ demande.demande.conteneur?.poids}} kg qui existe dans le depot {{ demande.demande.conteneur?.depot.nom}} qui situé a  {{ demande.demande.conteneur?.depot.lieu}}   </td>       
                   <td class="text-center">
                 <button
                   cButton
