--- a/front/front/src/app/Usine/views_usine/afficheliste-conteneur-usine/afficheliste-conteneur-usine.html
+++ b/front/front/src/app/Usine/views_usine/afficheliste-conteneur-usine/afficheliste-conteneur-usine.html
@@ -27,7 +27,7 @@
       <tr *ngFor="let item of conteneurs">
         <td>{{ item.conteneur_code }}</td>
         <td>{{ item.conteneur.prix }}</td>
-        <td>{{ item.conteneur.poids }}</td>
+        <td>{{ item.conteneur.poids }} kg</td>
         <td>{{ item.user_name }}</td>
         <td>{{ item.depot_name }}</td>
         <td>{{ item.dechet_name }}</td>
