--- a/front/front/src/app/Usine/views_usine/waste_movement/waste.component.html
+++ b/front/front/src/app/Usine/views_usine/waste_movement/waste.component.html
@@ -4,7 +4,7 @@
       <tr>
         <th scope="col">
           Code
-          <input type="text" class="form-control" [(ngModel)]="filters.code" (ngModelChange)="applyFilters()">
+          <input type="text" class="form-control" [(ngModel)]="filters.conteneur_code" (ngModelChange)="applyFilters()">
         </th>
         <th scope="col">
           Type
