--- a/front/front/src/app/components/forget-password/forget-password.component.html
+++ b/front/front/src/app/components/forget-password/forget-password.component.html
@@ -7,7 +7,7 @@
     </form>
     <p *ngIf="message" class="message">{{ message }}</p>
     
-    <a routerLink="/login">Connecter</a>
+    <a routerLink="/login">Annuler</a>
 
   </div>
   
