--- a/front/front/src/app/Collecteur/views_collecteur/waste_movement/waste.component.html
+++ b/front/front/src/app/Collecteur/views_collecteur/waste_movement/waste.component.html
@@ -1,5 +1,5 @@
 <c-row ngPreserveWhitespaces class="mt-4">
-  <table cTable>
+  <table cTable class="table table-striped table-bordered">
     <thead>
       <tr>
         <th scope="col">
@@ -43,8 +43,10 @@
         
         <th scope="col" class="center">
           Nombre de conteneur
-          <input type="text" class="form-control" [(ngModel)]="filters.nombreDeConteneur" (ngModelChange)="applyFilters()">
-        </th>
+          <input type="text" class="form-control" [(ngModel)]="filters.nombreDeConteneur" (ngModelChange)="applyFilters()" list="count">
+          <datalist id="count">
+           <option *ngFor="let count of uniquecounts" [value]="count"></option>
+         </datalist>
 
         <th scope="col" class="center">
           Poids (kg)
@@ -53,6 +55,9 @@
            [(ngModel)]="filters.poids" 
            (ngModelChange)="applyFilters()"
            list="poids">
+           <datalist id="poids">
+            <option *ngFor="let poids of uniquePoids" [value]="poids"></option>
+          </datalist>
           
          </th>
         <th scope="col" class="center">
@@ -88,14 +93,13 @@
         </td>
                 <td>en {{ item.data.movement.date }} </td>
         <td>{{ item.count }}</td>
-        <td>{{ item.data.poids}}</td>
+        <td>{{ item.data.poids}} (kg)</td>
         <ng-container *ngIf="item.data.movement.IDdemandeurrecycleur === null; else entreeTemplate">
-          <td><span style="color: green;">Entrée</span></td>
+          <td><span class="text-success">Entrée</span></td>
         </ng-container>
         <ng-template #entreeTemplate>
-          <td><span style="color: red;">Sortie</span></td>
+          <td><span class="text-danger">Sortie</span></td>
         </ng-template>
-        
         
       </tr>
     </tbody>
