--- a/front/front/src/app/Collecteur/views_collecteur/afficheliste-depot-collecteur/afficheliste-depot-collecteur.component.html
+++ b/front/front/src/app/Collecteur/views_collecteur/afficheliste-depot-collecteur/afficheliste-depot-collecteur.component.html
@@ -10,7 +10,16 @@
       Ajouter Un Dépôt
     </button>
   </div>
-
+  <div class="filter-section mb-3">
+    <input
+      type="text"
+      class="form-control"
+      placeholder="Rechercher par nom ou lieu"
+      [(ngModel)]="filterText"
+      (input)="applyFilter()"
+    />
+  </div>
+  
   <table cTable>
     <thead>
       <tr>
@@ -20,10 +29,9 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let item of depots">
+      <tr *ngFor="let item of filteredDepots">
         <td>{{ item.nom }}</td>
         <td>{{ item.lieu }}</td>
-
         <td>
           <div
             class="d-grid gap-2 d-md-flex justify-content-md-center"
@@ -35,25 +43,20 @@
               class="btn btn-warning"
               >Modifier</a
             >
-      <!--<a
+    
+            <a
               type="button"
               (click)="deleteDepot($event, item.id)"
               class="btn btn-danger"
-              >Supprimer</a
-            >-->   
-        <a
-            type="button"
-            (click)="deleteDepot($event, item.id)"
-            class="btn btn-danger"
-            [ngClass]="{ 'disabled': disabledDepots[item.id] }"
-            [attr.aria-disabled]="disabledDepots[item.id] ? true : null"
-            
-          >
-            Supprimer
-          </a> 
+              [ngClass]="{ 'disabled': disabledDepots[item.id] }"
+              [attr.aria-disabled]="disabledDepots[item.id] ? true : null"
+            >
+              Supprimer
+            </a>
           </div>
         </td>
       </tr>
     </tbody>
+    
   </table>
 </div>
