--- a/front/front/src/app/Usine/views_usine/create-depot-usine/create-depot-usine.component.html
+++ b/front/front/src/app/Usine/views_usine/create-depot-usine/create-depot-usine.component.html
@@ -1,4 +1,4 @@
-<!--<div class="container">
+<div class="container">
   <div class="mb-3">
     <button
       cNavLink
@@ -9,7 +9,7 @@
     >
       back
     </button>
-  </div>-->
+  </div>
   <h2>Ajouter un depot</h2>
 
   <form [formGroup]="depotform" (ngSubmit)="saveDepot()" class="p-fluid">
