--- a/front/front/src/app/recycler/views_recycler/afficheliste-conteneur-acquis-recycleur/afficheliste-conteneur-recycleur-aquis.component.html
+++ b/front/front/src/app/recycler/views_recycler/afficheliste-conteneur-acquis-recycleur/afficheliste-conteneur-recycleur-aquis.component.html
@@ -4,7 +4,11 @@
       <tr>
         <th scope="col">
           Code
-          <input type="text" class="form-control" [(ngModel)]="filters.conteneur_code" (input)="filterMovements()">
+          <input type="text" class="form-control" [(ngModel)]="filters.conteneur_code" (input)="filterMovements()"
+          list="codeList">
+          <datalist id="codeList">
+            <option *ngFor="let code of uniqueCodes" [value]="code"></option>
+          </datalist>
         </th>
         <th scope="col">
           Type
