--- a/front/front/src/app/Usine/views_usine/createcodes-usine/createcodesusine/createcodesusine.component.html
+++ b/front/front/src/app/Usine/views_usine/createcodes-usine/createcodesusine/createcodesusine.component.html
@@ -1,4 +1,16 @@
-<h2>Ajouter un depot</h2>
+
+<div class="mb-3">
+  <button
+    (click)="goBack()"
+    class="btn btn-primary float-end"
+  >
+    Retour
+  </button>
+</div>
+
+
+
+<h2>Ajouter un Code</h2>
 
   <form [formGroup]="Codeform" (ngSubmit)="checkAndSaveCode()" class="p-fluid">
     <div class="form-group">
@@ -12,6 +24,17 @@
       />
      
     </div>
+
+    <div class="form-group">
+      <label for="type">Type</label>
+      <select formControlName="dechet_id" class="form-control" id="type" name="type">
+        <option *ngFor="let dechet of dechets" [value]="dechet.id">
+          {{ dechet.type }}
+        </option>
+      </select>
+    </div>
+    
+    
 
     <div class="mb-3">
       <button type="submit" pButton class="btn btn-primary float-end">
