--- a/front/front/src/app/recycler/views_recycler/waste/waste_movement/waste.component.html
+++ b/front/front/src/app/recycler/views_recycler/waste/waste_movement/waste.component.html
@@ -46,8 +46,8 @@
         <td>l'usine {{ item.usine_name}}  située à {{item.adressusine}}</td>
         <td>le collecteur  {{ item.lastNameCollecteur }}{{item.lastNameCollecteur}} située à  {{item.addresscollecteur}} </td>
         <td> en {{item.datecollecteur
-        }} à  {{item.hourcollecteur}}</td>
-        <td> en {{item.date}} à  {{item.hour}}</td>
+        }} <!--à  {{item.hourcollecteur}}--></td>
+        <td> en {{item.date}} <!-- {{item.hour}}--></td>
         <td>{{item.count}}</td>
         <td>{{item.poids}} kg </td>
 
