Your commit message

--- a/front/front/src/app/Collecteur/views_collecteur/afficheliste-conteneur-publier-dangereux-collecteur/afficheliste-conteneur-collecteur-publier-dangereux.html
+++ b/front/front/src/app/Collecteur/views_collecteur/afficheliste-conteneur-publier-dangereux-collecteur/afficheliste-conteneur-collecteur-publier-dangereux.html
@@ -25,7 +25,7 @@ user_name }}</td>
           <td>{{item.conteneur.poids}}</td>
         <td>
         <button cButton color="danger" style="margin-left: -5px" 
-        (click)="openDemandeModal( item,  item.conteneur.id)">
+        (click)="openDemandeModal( item,  item.conteneur.id,item.conteneur.user_id)">
    Passer Demande
 </button>
 
