--- a/front/front/src/app/Collecteur/views_collecteur/afficheliste-conteneur-publier-textille-collecteur/afficheliste-conteneur-collecteur-publier-textillle.html
+++ b/front/front/src/app/Collecteur/views_collecteur/afficheliste-conteneur-publier-textille-collecteur/afficheliste-conteneur-collecteur-publier-textillle.html
@@ -26,7 +26,7 @@ user_name }}</td>
 
         <td>
         <button cButton color="danger" style="margin-left: -5px" 
-        (click)="openDemandeModal( item,  item.conteneur.id)">
+        (click)="openDemandeModal( item,  item.conteneur.id ,item.conteneur.user_id)">
    Passer Demande
 </button>
 
